git HEAD

    * The internal representation of ignored hashes was changed
    * hashl update no longer re-adds ignored (but existing) files
    * hashl update now saves its state when being interrupted
      (sigint/sigterm)

hashl 0.1 - Fri May 06 2011

    * Initial release
    * Create/Update hash database
    * Find/Copy files not in database
    * Ignore files (will be marked as known, but can be removed from the file
      system)